Logica registro e inicio-correo

--- a/Views/User/RegistroUsuarios.cshtml
+++ b/Views/User/RegistroUsuarios.cshtml
@@ -1,9 +1,9 @@
-﻿@model CRACKED.Dtos.UserDto
+﻿﻿@model CRACKED.Dtos.UserDto
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>UserDto</h4>
         <hr />
