Vistas inicio,registro y inicio de sesion

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,30 +2,44 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="image-container">
+    <img src="~/Content/image/Sin título.png" class="full-width-image" />
+    <div class="button-container">
+        <button class="btn btn-primary">Ver Más</button>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<!-- Agregar el siguiente CSS -->
+<style>
+    .full-width-image {
+        width: auto; /* La imagen ocupará todo el ancho de la pantalla */
+        height: auto; /* Mantiene la altura proporcional original */
+        object-fit: contain; /* Asegura que la imagen no se deforme */
+    }
+
+    .image-container {
+        position: relative; /* Necesario para posicionar el botón dentro de la imagen */
+        width: 100%; /* El contenedor tiene el mismo ancho que la pantalla */
+    }
+
+    .button-container {
+        position: absolute;
+        bottom:10px; /* Coloca el botón 20px por encima de la parte inferior de la imagen */
+        left: 50%; /* Centra el botón horizontalmente */
+        transform: translateX(-50%); /* Asegura que el botón esté completamente centrado */
+    }
+
+    .btn-primary {
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+        }
+</style>
