--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,11 +11,12 @@
 
         body {
             background-color: #f7ebdd;
+            left: 20PX;
         }
 
         .body-content {
             position: absolute;
-            width: 110vw;
+          
             padding: 80px; /* Reduce el padding */
            
         }
