--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,12 +8,11 @@
     <div class="image-container">
         <img src="~/Content/Imagen/Sin título.jpg" class="full-width-image" />
         <div class="button-container">
-            <button class="btn btn-primary">Ordena</button>
+            <button class="btn btn-primary" onclick="window.location='@Url.Action("Productos", "User")'">Ordena</button>
         </div>
     </div>
 </div>
 
-<!-- Agregar el siguiente CSS -->
 <style>
     .full-width-image {
         width: 100%; /* La imagen ocupará todo el ancho del contenedor */
