--- a/Views/User/RegistroUsuarios.cshtml
+++ b/Views/User/RegistroUsuarios.cshtml
@@ -5,7 +5,7 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>Registro de Usuario</h4>
+    <h4 style="color:saddlebrown;  font-family: cursive;">Registro de Usuario</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -53,7 +53,7 @@
             <div class="input-group">
                 @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Contraseña", id = "txtContraseña" })
                 <span class="input-group-text" id="togglePassword" style="cursor: pointer;">
-                    <i class="bi bi-eye-slash-fill"></i>
+                    <i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>
                 </span>
             </div>
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
@@ -67,7 +67,7 @@
             <div class="input-group">
                 @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", placeholder = "Confirmar Contraseña", id = "txtConfirmContraseña" })
                 <span class="input-group-text" id="toggleConfirmPassword" style="cursor: pointer;">
-                    <i class="bi bi-eye-slash-fill"></i>
+                    <i class="bi bi-eye-slash-fill"  style="color:saddlebrown;"></i>
                 </span>
             </div>
             @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
@@ -95,7 +95,7 @@
     togglePassword.addEventListener('click', function () {
         const type = passwordInput.type === 'password' ? 'text' : 'password';
         passwordInput.type = type;
-        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill"></i>' : '<i class="bi bi-eye-fill"></i>';
+        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill"  style="color:saddlebrown;"></i>' ;
     });
 
     // Script para toggle de visibilidad de la confirmación de contraseña
@@ -105,6 +105,22 @@
     toggleConfirmPassword.addEventListener('click', function () {
         const type = confirmPasswordInput.type === 'password' ? 'text' : 'password';
         confirmPasswordInput.type = type;
-        toggleConfirmPassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill"></i>' : '<i class="bi bi-eye-fill"></i>';
+        toggleConfirmPassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill" style="color:saddlebrown;"></i>';
     });
 </script>
+<style>
+    .btn-primary {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: saddlebrown;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .form-group {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+</style>
