--- a/Views/User/Galletas.cshtml
+++ b/Views/User/Galletas.cshtml
@@ -11,36 +11,33 @@
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col">
-                One of three columns
+                <img src="~/Content/Imagen/image (4).png" width="380" height="360" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Cookienute" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'"/>
+                    </div>
+                </div>
             </div>
             <div class="col">
-                One of three columns
+                <img src="~/Content/Imagen/image (5).png" width="380" height="360" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Kinder Cookie" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'"/>
+                    </div>
+                </div>
             </div>
             <div class="col">
-                One of three columns
+                <img src="~/Content/Imagen/image (1).png" width="380" height="360" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="Rainbow" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'" />
+                    </div>
+                </div>
             </div>
         </div>
     </div>
    
-    @*<div class="row justify-content-around">
-        <div class="col-4">
-
-            <img src="~/Models/image/image (1).png" width="380" height="360" />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Galletas" class="btn btn-primary" />
-                </div>
-            </div>
-
-        </div>
-        <div class="col-4">
-            <img src="~/Models/image/image (2).png" width="380" height="360" />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Cookiecakes" class="btn btn-primary" />
-                </div>
-            </div>
-        </div>*@
+  
 </div>
 
 
@@ -52,27 +49,7 @@
 <div>
     @Html.ActionLink("Volver a la lista", "Index", "Home")
 </div>
-<script>
-    // Script para toggle de visibilidad de la contraseña
-    const togglePassword = document.getElementById('togglePassword');
-    const passwordInput = document.getElementById('txtContraseña');
 
-    togglePassword.addEventListener('click', function () {
-        const type = passwordInput.type === 'password' ? 'text' : 'password';
-        passwordInput.type = type;
-        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill"  style="color:saddlebrown;"></i>' ;
-    });
-
-    // Script para toggle de visibilidad de la confirmación de contraseña
-    const toggleConfirmPassword = document.getElementById('toggleConfirmPassword');
-    const confirmPasswordInput = document.getElementById('txtConfirmContraseña');
-
-    toggleConfirmPassword.addEventListener('click', function () {
-        const type = confirmPasswordInput.type === 'password' ? 'text' : 'password';
-        confirmPasswordInput.type = type;
-        toggleConfirmPassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill" style="color:saddlebrown;"></i>';
-    });
-</script>
 <style>
     .btn-primary {
         padding: 10px 30px;
