--- a/Views/User/Productos.cshtml
+++ b/Views/User/Productos.cshtml
@@ -10,19 +10,19 @@
     <div class="row justify-content-around">
         <div class="col-4">
 
-            <img src="~/Models/image/image (1).png" width="380" height="360" />
+            <img src="~/Content/Imagen/image (1).png" width="380" height="360" />
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Galletas" class="btn btn-primary" />
+                    <input type="button" value="Galletas" class="btn btn-primary" onclick="window.location='@Url.Action("Galletas", "User")'" />
                 </div>
             </div>
-            
+
         </div>
         <div class="col-4">
-            <img src="~/Models/image/image (2).png" width="380" height="360" />
+            <img src="~/Content/Imagen/image (2).png" width="380" height="360" />
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Cookiecakes" class="btn btn-primary"  />
+                    <input type="button" value="Cookiecakes" class="btn btn-primary" onclick="window.location='@Url.Action("Cookiecakes", "User")'" />
                 </div>
             </div>
         </div>
