--- a/Views/User/inicioSesion.cshtml
+++ b/Views/User/inicioSesion.cshtml
@@ -4,100 +4,106 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+<div class="row justify-content-xl-start">
 
-    <div class="form-horizontal">
-        <h3 style="color:saddlebrown;  font-family: cursive;">Iniciar Sesión</h3>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="col-4">
+        <div class="form-horizontal">
+            <h3 style="color:saddlebrown;  font-family: cursive;">Iniciar Sesión</h3>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <!-- Campo de Correo o Usuario -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, "Usuario", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", placeholder = "Nombre de usuario o correo electrónico" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <!-- Campo de Contraseña con botón para ver/ocultar -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, "Contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="input-group">
-                    @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @type = "password", placeholder = "Contraseña", id = "txtContraseña" })
-                    <div class="input-group-append">
-                        <button id="togglePassword" type="button" class="btn btn-outline-secondary" style="border-color:saddlebrown">
-                            <i class="bi bi-eye-slash-fill" style="color: saddlebrown; "></i>
-                        </button>
-                    </div>
+            <!-- Campo de Correo o Usuario -->
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, "Usuario", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", placeholder = "Nombre de usuario o correo electrónico" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+
+            <!-- Campo de Contraseña con botón para ver/ocultar -->
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, "Contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="input-group">
+                        @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @type = "password", placeholder = "Contraseña", id = "txtContraseña" })
+                        <div class="input-group-append">
+                            <button id="togglePassword" type="button" class="btn btn-outline-secondary" style="border-color:saddlebrown">
+                                <i class="bi bi-eye-slash-fill" style="color: saddlebrown; "></i>
+                            </button>
+                        </div>
+                    </div>
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <!-- Botón de Enviar -->
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Iniciar Sesión" class="btn btn-primary" />
+                </div>
             </div>
         </div>
+        <!-- Registro -->
+        <p class="fst-italic">¿Aún no haces parte de nuestros clientes?</p>
+        <p class="fst-italic">¡Regístrate ahora!</p>
 
-        <!-- Botón de Enviar -->
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Iniciar Sesión" class="btn btn-primary" />
-            </div>
+            <button type="button" class="btn btn-secondary" onclick="window.location='@Url.Action("RegistroUsuarios", "User")'">Registrarse</button>
         </div>
     </div>
-    <!-- Registro -->
-    <p class="fst-italic">¿Aún no haces parte de nuestros clientes?</p>
-    <p class="fst-italic">¡Regístrate ahora!</p>
 
-    <div class="form-group">
-        <button type="button" class="btn btn-secondary" onclick="window.location='@Url.Action("RegistroUsuarios", "User")'">Registrarse</button>
+    <div class="col-4">
+     
     </div>
-
-
-
-}
-
-<div>
-    @Html.ActionLink("Volver a la página principal", "Index", "Home")
 </div>
+      
 
-<script>
-    // Script para toggle de visibilidad de contraseña
-    const togglePassword = document.getElementById('togglePassword');
-    const passwordInput = document.getElementById('txtContraseña');
+        <div>
+            @Html.ActionLink("Volver a la página principal", "Index", "Home")
+        </div>
+}
+        <script>
+            // Script para toggle de visibilidad de contraseña
+            const togglePassword = document.getElementById('togglePassword');
+            const passwordInput = document.getElementById('txtContraseña');
 
-    togglePassword.addEventListener('click', function () {
-        // Cambiar el tipo de input para mostrar u ocultar la contraseña
-        const type = passwordInput.type === 'password' ? 'text' : 'password';
-        passwordInput.type = type;
+            togglePassword.addEventListener('click', function () {
+                // Cambiar el tipo de input para mostrar u ocultar la contraseña
+                const type = passwordInput.type === 'password' ? 'text' : 'password';
+                passwordInput.type = type;
 
-        // Cambiar el ícono del botón
-        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill" style="color:saddlebrown;"></i>';
-    });
+                // Cambiar el ícono del botón
+                togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill" style="color:saddlebrown;"></i>';
+            });
 
 
-</script>
-<style>
-    .btn-primary {
-        padding: 10px 30px;
-        font-size: 16px;
-        background-color: saddlebrown;
-        color: whitesmoke;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
+        </script>
+        <style>
+            .btn-primary {
+                padding: 10px 30px;
+                font-size: 16px;
+                background-color: saddlebrown;
+                color: whitesmoke;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
 
-    .btn-secondary {
-        font-size: 16px;
-        background-color: #efcbab;
-        color: saddlebrown;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        opacity: 0.8;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
+            .btn-secondary {
+                font-size: 16px;
+                background-color: #efcbab;
+                color: saddlebrown;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                opacity: 0.8;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
 
-    .form-group {
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-</style>
+            .form-group {
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+         
+        </style>
