Validaciones y terminado tabla usuario

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -45,8 +45,18 @@
     }
 
         .btn-primary:hover {
-            background-color: #efcbab;
+            background-color: #542b1d;
         }
-
+    .btn-primary {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: saddlebrown;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        margin-top: 10px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
     
 </style>
