--- a/Views/User/Detalle_Cookiecakes.cshtml
+++ b/Views/User/Detalle_Cookiecakes.cshtml
@@ -105,6 +105,9 @@
         cursor: pointer;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
+        .btn-primary:hover {
+            background-color: #542b1d;
+        }
 
     .form-group {
         text-align: center;
@@ -192,7 +195,7 @@
         }
     .row-porcion {
         height: stretch;
-        width: 60%;
+        width: 100%;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 </style>
