--- a/Views/User/Galletas.cshtml
+++ b/Views/User/Galletas.cshtml
@@ -62,7 +62,9 @@
         cursor: pointer;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
-
+        .btn-primary:hover {
+            background-color: #542b1d;
+        }
     .form-group {
         text-align: center;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
