--- a/Views/User/Detalle_Cookiecakes.cshtml
+++ b/Views/User/Detalle_Cookiecakes.cshtml
@@ -4,63 +4,55 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-
-    <hr />
-    <div class="container-fluid">
-        <div class="row justify-content-evenly ">
-            <div class="col-4">
-                <img src="~/Content/Imagen/image (6).png" width="580" height="460" class="img-fluid" />
-
-            </div>
-            <div class="col-4">
-                <div>
-                    <h2 style="color: saddlebrown; font-family: cursive; text-align: left;"> Nombre galleta</h2>
-                    <h4 style="color: black; font-family: cursive; text-align: left; "> Precio unitario</h4>
-                    <h5 style="color: black; font-family: cursive; text-align: left;"> Descripcion Producto</h5>
-                    <h6 style="color: black; font-family: cursive; text-align: left;"> Cantidad</h6>
+    <div class="form-horizontal">
+        <hr />
+        <div class="container-fluid">
+            <div class="row justify-content-evenly ">
+                <div class="col-4">
+                    <img src="~/Content/Imagen/image (6).png" width="580" height="460" class="img-fluid" />
                 </div>
-                <div class="js-qty__wrapper">
-                    <button id="decrement" class="qty-button">-</button>
-                    <input type="text" id="quantity" value="1" readonly>
-                    <button id="increment" class="qty-button">+</button>
-                </div>
-
-                <div class="row justify-content-start row-porcion">
-                    <div class="col-sm-4">
-                        <h5 style="color: black; font-family: cursive; text-align: left;"> Porciones:</h5>
+                <div class="col-4">
+                    <div>
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;"> Nombre galleta</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left;"> Precio unitario</h4>
+                        <h5 style="color: black; font-family: cursive; text-align: left;"> Descripcion Producto</h5>
+                        <h6 style="color: black; font-family: cursive; text-align: left;"> Cantidad</h6>
                     </div>
-                    <div class="col-sm-4">
-                        <input type="text" id="selectionInput" value="x4" readonly>
+                    <div class="js-qty__wrapper">
+                        <button id="decrement" class="qty-button" type="button">-</button>
+                        <input type="number" id="quantity" name="quantity" value="1" min="1">
+                        <button id="increment" class="qty-button" type="button">+</button>
                     </div>
-                </div>
 
-                <div class="selection-wrapper">
-                    <button id="Buttonx4" class="select-button">x4</button>
+                    <div class="row justify-content-start row-porcion">
+                        <div class="col-sm-4">
+                            <h5 style="color: black; font-family: cursive; text-align: left;"> Porciones:</h5>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" id="selectionInput" name="selectionInput" value="x4">
+                        </div>
+                    </div>
 
-                    <button id="Buttonx8" class="select-button">x8</button>
-                </div>
+                    <div class="selection-wrapper">
+                        <button id="Buttonx4" class="select-button" type="button">x4</button>
+                        <button id="Buttonx8" class="select-button" type="button">x8</button>
+                    </div>
 
-                <div class="form-group">
-                    <div class="col-sm-1">
-                        <input type="submit" value="AGREGAR AL CARRITO" class="btn btn-primary" />
+                    <div class="form-group">
+                        <div class="col-sm-1">
+                            <input type="submit" value="AGREGAR AL CARRITO" class="btn btn-primary" />
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
-
-
     </div>
 
-</div>
-
-
-<div>
-    @Html.ActionLink("Volver a la lista", "Index", "Home")
-</div>
+    <div>
+        @Html.ActionLink("Volver a la lista", "Index", "Home")
+    </div>
 }
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const incrementButton = document.getElementById("increment");
@@ -78,126 +70,19 @@
                 quantityInput.value = Number(quantityInput.value) - 1;
             }
         });
-    });
 
-   
-</script>
-<script>
-    document.getElementById("Buttonx4").addEventListener("click", () => {
-        event.preventDefault();
-        document.getElementById("selectionInput").value = "x4";
-    });
+        document.getElementById("Buttonx4").addEventListener("click", (event) => {
+            event.preventDefault();
+            document.getElementById("selectionInput").value = "x4";
+        });
 
-    document.getElementById("Buttonx8").addEventListener("click", () => {
-        event.preventDefault();
-        document.getElementById("selectionInput").value = "x8";
+        document.getElementById("Buttonx8").addEventListener("click", (event) => {
+            event.preventDefault();
+            document.getElementById("selectionInput").value = "x8";
+        });
     });
 </script>
+
 <style>
-    .btn-primary {
-        padding: 10px 30px;
-        font-size: 16px;
-        background-color: saddlebrown;
-        color: whitesmoke;
-        border: none;
-        border-radius: 5px;
-        margin-top: 10px;
-        cursor: pointer;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-        .btn-primary:hover {
-            background-color: #542b1d;
-        }
-
-    .form-group {
-        text-align: center;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-
-    .js-qty__wrapper {
-        display: flex;
-        align-items: center;
-    }
-
-    .qty-button, #quantity {
-        background-color: transparent;
-        border: 1px solid #ccc;
-        padding: 10px;
-        font-size: 16px;
-    }
-
-    #quantity {
-        width: 50px;
-        text-align: center;
-        font-size: 16px;
-        border: 1px solid #ddd;
-        margin: 0 5px;
-    }
-    .qty-button:first-of-type { /* Botón de decremento */
-        border-radius: 5px 0 0 5px; /* Borde redondeado a la izquierda */
-    }
-
-    .qty-button:last-of-type { /* Botón de incremento */
-        border-radius: 0 5px 5px 0; /* Borde redondeado a la derecha */
-    }
-
-    .qty-button {
-        background-color: transparent;
-        color: black;
-        cursor: pointer;
-        border: 1px solid #ddd;
-    }
-
-        .qty-button:hover {
-            background-color: saddlebrown;
-        }
-
-    .selection-wrapper {
-        display: flex;
-        align-items: center;
-    }
-
-    .select-button, #selectionInput {
-        border: 1px solid #ddd;
-        padding: 10px;
-        font-size: 16px;
-        cursor: pointer;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-
-    #selectionInput {
-        width: 50px;
-        height:20px;
-        text-align:start;
-        border: none;
-        background-color:transparent;
-        
-    }
-  
-#selectionInput:focus {
-  outline: none;
-}
-    .select-button:first-of-type {
-        border-radius: 5px 0 0 5px;
-    }
-
-    .select-button:last-of-type {
-        border-radius: 0 5px 5px 0;
-    }
-
-    .select-button {
-        background-color: sienna;
-        color: white;
-    }
-
-        .select-button:hover {
-            background-color:saddlebrown;
-        }
-    .row-porcion {
-        height: stretch;
-        width: 100%;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
+    /* Tu CSS aquí (sin cambios) */
 </style>
-
-
