--- a/Views/User/Detalle_Galletas.cshtml
+++ b/Views/User/Detalle_Galletas.cshtml
@@ -1,24 +1,21 @@
 ﻿@model CRACKED.Dtos.ProductListDto
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AgregarProductoAlCarrito", "Carrito", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-
         <hr />
         <div class="container-fluid">
-            <div class="row justify-content-evenly ">
+            <div class="row justify-content-evenly">
                 <div class="col-4">
                     <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
-
                 </div>
                 <div class="col-4">
                     <div>
-                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">Nombre:@Model.Products[0].Nombre</h2>
-                        <h4 style="color: black; font-family: cursive; text-align: left; ">Precio: @Model.Products[0].Precio</h4>
-                        <h5 style="color: black; font-family: cursive; text-align: left;">Stock @Model.Products[0].Stock</h5>
-                       
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">Nombre: @Model.Products[0].Nombre</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left;">Precio: @Model.Products[0].Precio</h4>
+                        <h5 style="color: black; font-family: cursive; text-align: left;">Stock: @Model.Products[0].Stock</h5>
                     </div>
                     <div class="js-qty__wrapper">
                         <button id="decrement" class="qty-button">-</button>
@@ -26,7 +23,10 @@
                         <button id="increment" class="qty-button">+</button>
                     </div>
 
-
+                    <!-- Campos Ocultos para IdProducto, Cantidad y Precio -->
+                    <input type="hidden" name="productoId" value="@Model.Products[0].IdProducto" />
+                    <input type="hidden" id="hiddenQuantity" name="cantidad" value="1" />
+                    <input type="hidden" name="precio" value="@Model.Products[0].Precio" />
 
                     <div class="form-group">
                         <div class="col-sm-1">
@@ -34,50 +34,44 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
-
         </div>
-
     </div>
-
 
     <div>
         @Html.ActionLink("Volver a la lista", "Index", "Home")
     </div>
 }
 
+}
+
 
 
 <script>
-    <input type="hidden" id="hiddenQuantity" name="Cantidad" value="1" />
     document.addEventListener("DOMContentLoaded", function () {
         const incrementButton = document.getElementById("increment");
         const decrementButton = document.getElementById("decrement");
         const quantityInput = document.getElementById("quantity");
         const hiddenQuantity = document.getElementById("hiddenQuantity");
 
-        incrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        incrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             quantityInput.value = Number(quantityInput.value) + 1;
-            hiddenQuantity.value = quantityInput.value; // Actualiza el valor en el campo oculto
+            hiddenQuantity.value = quantityInput.value;
         });
 
-        decrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        decrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             if (Number(quantityInput.value) > 1) {
                 quantityInput.value = Number(quantityInput.value) - 1;
-                hiddenQuantity.value = quantityInput.value; // Actualiza el valor en el campo oculto
+                hiddenQuantity.value = quantityInput.value;
             }
         });
 
-        // Inicializa el campo oculto al cargar la página
         hiddenQuantity.value = quantityInput.value;
     });
-
 </script>
+
 <script>
     document.getElementById("Buttonx4").addEventListener("click", () => {
         event.preventDefault();
