--- a/Views/Shared/_Layout - Admin.cshtml
+++ b/Views/Shared/_Layout - Admin.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿
+@using CRACKED.Dtos
+
+@{
+    var userLogged = ViewBag.UserLogged as UserDto;
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,6 +21,7 @@
             background-color: #f7ebdd;
             left: 20PX;
         }
+
         .nav-icon {
             font-size: 3rem; /* Icon size */
             color: saddlebrown; /* Icon color */
@@ -22,16 +29,16 @@
             align-items: center; /* Center align items vertically */
             justify-content: center; /* Center align items horizontally */
         }
+
         .icon-footer {
             font-size: 1rem; /* Icon size */
             color: saddlebrown; /* Icon color */
-            
-           
         }
+
         .body-content {
             position: absolute;
             padding: 100px; /* Reduce el padding */
-            min-height:50vh;
+            min-height: 50vh;
         }
 
         .logo-left {
@@ -45,35 +52,33 @@
             top: 10px;
             right: 20px;
             z-index: 1000;
-         
         }
+
         .vertical-menu {
             display: flex;
             flex-direction: column;
             z-index: 1000;
-           
         }
 
-    .vertical-menu .nav-link {
-        display: flex;
-        align-items: center;
-        padding: 10px;
-        text-decoration: none; /* Para eliminar el subrayado de los enlaces */
-        color: saddlebrown; /* Cambia el color del texto si es necesario */
-      
-    }
+            .vertical-menu .nav-link {
+                display: flex;
+                align-items: center;
+                padding: 10px;
+                text-decoration: none; /* Para eliminar el subrayado de los enlaces */
+                color: saddlebrown; /* Cambia el color del texto si es necesario */
+            }
 
-    .vertical-menu .nav-link img {
-        margin-right: 10px; /* Espacio entre la imagen y el texto */
-    }
+                .vertical-menu .nav-link img {
+                    margin-right: 10px; /* Espacio entre la imagen y el texto */
+                }
 
         .navbar-toggler {
             border: none;
             background-color: transparent;
             outline: none; /* Elimina el borde de enfoque */
             z-index: 1000;
-          
         }
+
         .collapse {
             background-color: whitesmoke;
         }
@@ -91,11 +96,40 @@
                 </a>
 
             </li>
-          
+
             <li class="nav-item">
-                <a href="@Url.Action("inicioSesion", "User")" class="nav-link">
-                    <i class="bi bi-person-fill nav-icon"> </i>
-                </a>
+                @if (Session["UserLogged"] != null)
+                {
+                    <button class="nav navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#login" aria-controls="login" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="bi bi-person-fill nav-icon" style="font-size: 4rem; "> </span>
+                    </button>
+                    <div class="pos-f-t">
+                        <div class="collapse" id="login">
+                            <div class="container-fluid">
+
+                                <h5 class="text-black h6">Mi perfil</h5>
+                                <div class="vertical-menu">
+                                    <p><strong>Nombre:</strong></p>
+                                    <!-- Correo del usuario -->
+                                    <p><strong>Correo:</strong> </p>
+                                    <!-- Botón de cerrar sesión -->
+                                    <form action="@Url.Action("Logout", "User")" method="post">
+                                        <button type="submit" class="btn btn-danger" style=" padding: 10px 30px; font-size: 16px; background-color: saddlebrown; color: whitesmoke; border: none; border-radius: 5px; margin-top: 10px; cursor: pointer; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Cerrar sesión</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                }
+                else
+                {
+                    <a href="@Url.Action("inicioSesion", "User")" class="nav-link">
+                        <i class="bi bi-person-fill nav-icon"> </i>
+                    </a>
+                }
             </li>
             <li class="nav-item">
                 <button class="nav navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#barralateral" aria-controls="barralateral" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,8 +159,8 @@
                 </div>
             </li>
         </ul>
-        </div>
-   
+    </div>
+
 
     <div class="container-fluid body-content">
         @RenderBody()
@@ -149,10 +183,10 @@
 
     </div>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundle/bootstrap")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundle/bootstrap")
 
 
 </body>
