--- a/Views/User/Detalle_Cookiecakes.cshtml
+++ b/Views/User/Detalle_Cookiecakes.cshtml
@@ -14,17 +14,18 @@
                 </div>
                 <div class="col-4">
                     <div>
-                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">Nombre:@Model.Products[0].Nombre</h2>
-                        <h4 style="color: black; font-family: cursive; text-align: left; ">Precio: @Model.Products[0].Precio</h4>
-                        <h5 style="color: black; font-family: cursive; text-align: left;">Stock @Model.Products[0].Stock</h5>
-
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
+                        <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
+                            Una mezcla irresistible de sabores y texturas. Este pastel suave y esponjoso está cargado de chispas de chocolate y M&Ms de colores vibrantes, creando un contraste perfecto con el delicioso y fresco relleno de fresas que lo hace aún más especial. Cada bocado ofrece una experiencia única, con el sabor dulce y afrutado de las fresas complementando la suavidad de la galleta y el crujiente de los M&Ms. Ideal para quienes buscan un pastel que combine lo mejor de los dulces clásicos con un toque de frescura frutal.
+                        </label>
                     </div>
                     <div class="js-qty__wrapper">
                         <button id="decrement" class="qty-button" type="button">-</button>
                         <input type="number" id="quantity" name="quantity" value="1" min="1">
                         <button id="increment" class="qty-button" type="button">+</button>
                     </div>
-
+                    <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
                     <div class="row justify-content-start row-porcion">
                         <div class="col-sm-4">
                             <h5 style="color: black; font-family: cursive; text-align: left;"> Porciones:</h5>
@@ -85,5 +86,107 @@
 </script>
 
 <style>
-    /* Tu CSS aquí (sin cambios) */
+    .btn-primary {
+        padding: 10px 30px;
+        font-size: 16px;
+        background-color: saddlebrown;
+        color: whitesmoke;
+        border: none;
+        border-radius: 5px;
+        margin-top: 10px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .form-group {
+        text-align: center;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    .js-qty__wrapper {
+        display: flex;
+        align-items: center;
+    }
+
+    .qty-button, #quantity {
+        background-color: transparent;
+        border: 1px solid #ccc;
+        padding: 10px;
+        font-size: 16px;
+    }
+
+    #quantity {
+        width: 50px;
+        text-align: center;
+        font-size: 16px;
+        border: 1px solid #ddd;
+        margin: 0 5px;
+    }
+
+    .qty-button:first-of-type { /* Botón de decremento */
+        border-radius: 5px 0 0 5px; /* Borde redondeado a la izquierda */
+    }
+
+    .qty-button:last-of-type { /* Botón de incremento */
+        border-radius: 0 5px 5px 0; /* Borde redondeado a la derecha */
+    }
+
+    .qty-button {
+        background-color: transparent;
+        color: black;
+        cursor: pointer;
+        border: 1px solid #ddd;
+    }
+
+        .qty-button:hover {
+            background-color: saddlebrown;
+        }
+
+    .selection-wrapper {
+        display: flex;
+        align-items: center;
+    }
+
+    .select-button, #selectionInput {
+        border: 1px solid #ddd;
+        padding: 10px;
+        font-size: 16px;
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+    #selectionInput {
+        width: 50px;
+        height: 20px;
+        text-align: start;
+        border: none;
+        background-color: transparent;
+    }
+
+        #selectionInput:focus {
+            outline: none;
+        }
+
+    .select-button:first-of-type {
+        border-radius: 5px 0 0 5px;
+    }
+
+    .select-button:last-of-type {
+        border-radius: 0 5px 5px 0;
+    }
+
+    .select-button {
+        background-color: sienna;
+        color: white;
+    }
+
+        .select-button:hover {
+            background-color: saddlebrown;
+        }
+
+    .row-porcion {
+        height: stretch;
+        width: 60%;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
 </style>
