--- a/Views/User/IndexAdmin.cshtml
+++ b/Views/User/IndexAdmin.cshtml
@@ -8,7 +8,7 @@
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col">
-                <a href="@Url.Action("Galletas", "User")">
+                <a href="@Url.Action("InfoUsuarios", "Admin")">
                     <img src="~/Content/Imagen/people_3239045.png" alt="Botón de imagen" class="img-fluid rounded img-button">
                 
                 </a>
@@ -19,10 +19,12 @@
                     
                 </a>
             </div>
+           
             <div class="col">
+              
                 <a href="@Url.Action("Galletas", "User")">
                     <img src="~/Content/Imagen/cookies_3858837.png" alt="Botón de imagen" class="img-fluid rounded img-button">
-                    
+
                 </a>
             </div>
         </div>
