--- a/Views/User/Productos.cshtml
+++ b/Views/User/Productos.cshtml
@@ -11,7 +11,7 @@
         <div class="row justify-content-around">
             <!-- Primer Producto -->
             <div class="col-4">
-                <img src="~/Content/Imagen/@Model.Users[0].Imagen" width="380" height="360" class="img-fluid" />
+                <img src="~/Content/Imagen/image (1).png" width="380" height="360" class="img-fluid" />
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="button" value="@Model.Users[0].Nombre" class="btn btn-primary"
@@ -22,7 +22,7 @@
 
             <!-- Segundo Producto -->
             <div class="col-4">
-                <img src="~/Content/Imagen/@Model.Users[1].Imagen" width="380" height="360" class="img-fluid" />
+                <img src="~/Content/Imagen/image (2).png" width="380" height="360" class="img-fluid" />
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="button" value="@Model.Users[1].Nombre" class="btn btn-primary"
